<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.dominicfeliton.worldwidechat</groupId>
  <artifactId>WorldwideChat</artifactId>
  <version>1.50</version>
  <packaging>pom</packaging>

  <name>WorldwideChat</name>
  <description>Break the blocky language barrier!</description>

  <modules>
    <module>bukkit-core</module>
    <module>spigot</module>
    <module>spigot-dist</module>
    <module>paper</module>
    <module>paper-dist</module>
    <module>folia</module>
    <module>folia-dist</module>
  </modules>

  <properties>
    <adventure.version>4.26.1</adventure.version>
    <flyway.version>12.6.2</flyway.version>
    <folia.api.version>26.1.2.build.8-stable</folia.api.version>
    <jackson.annotations.version>2.21</jackson.annotations.version>
    <junit.jupiter.version>6.2.0-SNAPSHOT</junit.jupiter.version>
    <maven.compiler.release>21</maven.compiler.release>
    <mockbukkit.paper.api.version>26.1.2.build.65-stable</mockbukkit.paper.api.version>
    <mockbukkit.version>4.113.1</mockbukkit.version>
    <mongock.version>5.5.1</mongock.version>
    <paper.api.version>26.1.2.build.65-stable</paper.api.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>2.1.0-alpha1</slf4j.version>
    <spigot.api.version>26.1.2-R0.1-SNAPSHOT</spigot.api.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.jupiter.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>com.dominicfeliton.worldwidechat</groupId>
        <artifactId>WorldwideChat-bukkit-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.dominicfeliton.worldwidechat</groupId>
        <artifactId>WorldwideChat-spigot</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.dominicfeliton.worldwidechat</groupId>
        <artifactId>WorldwideChat-paper</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.dominicfeliton.worldwidechat</groupId>
        <artifactId>WorldwideChat-folia</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.spigotmc</groupId>
        <artifactId>spigot-api</artifactId>
        <version>${spigot.api.version}</version>
      </dependency>
      <dependency>
        <groupId>io.papermc.paper</groupId>
        <artifactId>paper-api</artifactId>
        <version>${paper.api.version}</version>
      </dependency>
      <dependency>
        <groupId>dev.folia</groupId>
        <artifactId>folia-api</artifactId>
        <version>${folia.api.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockbukkit.mockbukkit</groupId>
        <artifactId>mockbukkit-v26.1.2</artifactId>
        <version>${mockbukkit.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-launcher</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.github.brenoepics</groupId>
      <artifactId>at4j</artifactId>
      <version>1.2.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.14.0</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-annotations</artifactId>
      <version>${jackson.annotations.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.22.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.cloud</groupId>
      <artifactId>google-cloud-translate</artifactId>
      <version>2.92.0</version>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>translate</artifactId>
      <version>2.44.12</version>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>s3</artifactId>
      <version>2.44.12</version>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>url-connection-client</artifactId>
      <version>2.44.12</version>
    </dependency>
    <dependency>
      <groupId>org.jsoup</groupId>
      <artifactId>jsoup</artifactId>
      <version>1.22.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.maven</groupId>
      <artifactId>maven-artifact</artifactId>
      <version>4.0.0-rc-5</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>7.0.2</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>9.7.0</version>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.12-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.15.0</version>
    </dependency>
    <dependency>
      <groupId>com.github.ben-manes.caffeine</groupId>
      <artifactId>caffeine</artifactId>
      <version>3.2.5-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
      <version>${flyway.version}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-mysql</artifactId>
      <version>${flyway.version}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-database-postgresql</artifactId>
      <version>${flyway.version}</version>
    </dependency>
    <dependency>
      <groupId>io.mongock</groupId>
      <artifactId>mongock-standalone</artifactId>
      <version>${mongock.version}</version>
    </dependency>
    <dependency>
      <groupId>io.mongock</groupId>
      <artifactId>mongodb-sync-v4-driver</artifactId>
      <version>${mongock.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>4.11.5</version>
    </dependency>
    <dependency>
      <groupId>com.deepl.api</groupId>
      <artifactId>deepl-java</artifactId>
      <version>1.16.0</version>
    </dependency>
    <dependency>
      <groupId>io.github.ollama4j</groupId>
      <artifactId>ollama4j</artifactId>
      <version>1.1.7</version>
    </dependency>
  </dependencies>

  <repositories>
    <!-- This adds the Spigot Maven repository to the build -->
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <!-- for adventure development builds -->
      <id>sonatype-oss-snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>papermc</id>
      <url>https://repo.papermc.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>dominicfeliton-yamltranslator</id>
      <url>https://raw.github.com/dominicfeliton/YAMLTranslator/maven-repo</url>
    </repository>
    <repository>
      <id>dominicfeliton-foliasmartinvs</id>
      <url>https://raw.github.com/dominicfeliton/SmartInvs/folia-maven-repo</url>
    </repository>
    <repository>
      <id>dominicfeliton-bukkitsmartinvs</id>
      <url>https://raw.github.com/dominicfeliton/SmartInvs/bukkit-maven-repo</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>citizens-repo</id>
      <url>https://maven.citizensnpcs.co/repo</url>
    </repository>
    <repository>
      <id>codemc</id>
      <url>https://repo.codemc.io/repository/maven-public/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
        <version>4.0.0</version>
        <executions>
          <execution>
            <goals>
              <goal>sort</goal>
            </goals>
            <phase>verify</phase>
          </execution>
          <!-- Execution for clean phase -->
          <execution>
            <id>sort-on-clean</id>
            <goals>
              <goal>sort</goal>
            </goals>
            <phase>clean</phase>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
